tests/testdata/errors/break_outside_loop.pine
// Test break outside loop - should fail

var x = 10
break

// Expected error: Break statement outside of loop
